@@ -1,17 +1,19 @@
 package com.hayden.multiagentidelib.agent;
 
-import com.embabel.agent.api.common.OperationContext;
-import com.fasterxml.jackson.annotation.JsonProperty;
+import com.embabel.agent.core.AgentPlatform;
+import com.embabel.agent.core.AgentProcess;
 import com.fasterxml.jackson.annotation.JsonPropertyDescription;
 import com.hayden.commitdiffcontext.cdc_utils.SetFromHeader;
 import com.hayden.commitdiffcontext.mcp.ToolCarrier;
+import com.hayden.utilitymodule.acp.events.Events;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import static com.hayden.utilitymodule.acp.AcpChatModel.MCP_SESSION_HEADER;
 
@@ -19,9 +21,15 @@ import static com.hayden.utilitymodule.acp.AcpChatModel.MCP_SESSION_HEADER;
  * Tool definitions for Context Manager agent operations over BlackboardHistory.
  * These tools enable deliberate context reconstruction and history navigation.
  */
+@Slf4j
 @Component
 @RequiredArgsConstructor
 public class ContextManagerTools implements ToolCarrier {
+
+    public static final String SESSION_ID_MISSING_MESSAGE =
+            "Session id is required - let them know that it failed - this is not your fault!";
+
+    private final AgentPlatform agentPlatform;
 
     /**
      * Result of a history trace operation
@@ -86,24 +94,6 @@ public class ContextManagerTools implements ToolCarrier {
     ) {}
 
     /**
-     * Result of creating a context snapshot
-     */
-    public record ContextSnapshotResult(
-            @JsonPropertyDescription("Status of the operation")
-            String status,
-            @JsonPropertyDescription("Unique identifier for the snapshot")
-            String snapshotId,
-            @JsonPropertyDescription("Timestamp when snapshot was created")
-            Instant created,
-            @JsonPropertyDescription("Number of history entries referenced")
-            int entryCount,
-            @JsonPropertyDescription("Summary of the snapshot")
-            String summary,
-            @JsonPropertyDescription("Error message if operation failed")
-            String error
-    ) {}
-
-    /**
      * Result of adding a note to history
      */
     public record HistoryNoteResult(
@@ -113,6 +103,28 @@ public class ContextManagerTools implements ToolCarrier {
             String noteId,
             @JsonPropertyDescription("Timestamp when note was created")
             Instant created,
+            @JsonPropertyDescription("Error message if operation failed")
+            String error
+    ) {}
+
+    /**
+     * Result of paging through message events.
+     */
+    public record MessagePageResult(
+            @JsonPropertyDescription("Status of the operation")
+            String status,
+            @JsonPropertyDescription("Identifier for the message entry being paged")
+            String entryId,
+            @JsonPropertyDescription("Message events in this page")
+            List<MessageEventView> events,
+            @JsonPropertyDescription("Total number of events available")
+            int totalCount,
+            @JsonPropertyDescription("Current page offset")
+            int offset,
+            @JsonPropertyDescription("Page size limit")
+            int limit,
+            @JsonPropertyDescription("Whether there are more events available")
+            boolean hasMore,
             @JsonPropertyDescription("Error message if operation failed")
             String error
     ) {}
@@ -136,39 +148,77 @@ public class ContextManagerTools implements ToolCarrier {
     ) {}
 
     /**
+     * Simplified view of a message event in a message entry.
+     */
+    public record MessageEventView(
+            @JsonPropertyDescription("Event index within the message entry")
+            int index,
+            @JsonPropertyDescription("When the event was created")
+            Instant timestamp,
+            @JsonPropertyDescription("Event type")
+            String eventType,
+            @JsonPropertyDescription("Node ID associated with the event")
+            String nodeId,
+            @JsonPropertyDescription("String representation of the event")
+            String summary
+    ) {}
+
+    /**
      * Retrieve the ordered history of events for a specific action or agent execution.
      * Used to understand what actually happened during a step.
      */
     @org.springframework.ai.tool.annotation.Tool(description = "Retrieve ordered history for a specific action")
     public HistoryTraceResult traceHistory(
-            @JsonPropertyDescription("Action name to filter by (optional)")
+            @SetFromHeader(MCP_SESSION_HEADER)
+            String sessionId,
+            @JsonPropertyDescription("Action name to filter by (optional) - accepts regex also.")
             String actionName,
             @JsonPropertyDescription("Input type to filter by (optional)")
             String inputTypeFilter
     ) {
         try {
-            BlackboardHistory.History history = getCurrentHistory();
-            if (history == null) {
-                return new HistoryTraceResult("empty", List.of(), 0, null);
+            if (!StringUtils.hasText(sessionId)) {
+                return new HistoryTraceResult("error", List.of(), 0, SESSION_ID_MISSING_MESSAGE);
             }
 
-            List<BlackboardHistory.Entry> filtered = history.entries().stream()
-                    .filter(entry -> actionName == null || entry.actionName().equals(actionName))
-                    .filter(entry -> inputTypeFilter == null || 
-                            (entry.inputType() != null && entry.inputType().getSimpleName().equals(inputTypeFilter)))
-                    .toList();
+            var c = getCurrentHistory(sessionId);
 
-            List<HistoryEntryView> views = createEntryViews(filtered);
+            if (c == null)
+                return new HistoryTraceResult("empty", List.of(), 0, null);
 
-            return new HistoryTraceResult(
-                    "success",
-                    views,
-                    views.size(),
-                    null
-            );
+            return c.fromHistory(history -> {
+                if (history == null) {
+                    return new HistoryTraceResult("empty", List.of(), 0, null);
+                }
+
+                List<BlackboardHistory.Entry> filtered = history.entries().stream()
+                        .filter(entry -> matchesActionName(actionName, entry.actionName()))
+                        .filter(entry -> matchesInputType(inputTypeFilter, entry.inputType()))
+                        .toList();
+
+                List<HistoryEntryView> views = createEntryViews(filtered);
+
+                return new HistoryTraceResult(
+                        "success",
+                        views,
+                        views.size(),
+                        null
+                );
+            });
         } catch (Exception e) {
             return new HistoryTraceResult("error", List.of(), 0, e.getMessage());
         }
+    }
+
+    private static boolean matchesInputType(String inputTypeFilter, Class<?> aClass) {
+        return inputTypeFilter == null || (aClass != null && aClass.getSimpleName().equalsIgnoreCase(inputTypeFilter));
+    }
+
+    private static boolean matchesActionName(String actionNameFilter, String s) {
+        return actionNameFilter == null
+                || s.toLowerCase().contains(actionNameFilter.toLowerCase())
+                || s.toLowerCase().matches(actionNameFilter)
+                || s.matches(actionNameFilter);
     }
 
     /**
@@ -177,6 +227,8 @@ public class ContextManagerTools implements ToolCarrier {
      */
     @org.springframework.ai.tool.annotation.Tool(description = "List history entries with pagination")
     public HistoryListingResult listHistory(
+            @SetFromHeader(MCP_SESSION_HEADER)
+            String sessionId,
             @JsonPropertyDescription("Number of entries to skip (offset)")
             Integer offset,
             @JsonPropertyDescription("Maximum number of entries to return")
@@ -185,40 +237,50 @@ public class ContextManagerTools implements ToolCarrier {
             String startTime,
             @JsonPropertyDescription("Filter by time range end (ISO-8601)")
             String endTime,
-            @JsonPropertyDescription("Filter by action name")
+            @JsonPropertyDescription("Filter by action name - accepts regex also")
             String actionFilter
     ) {
         try {
-            BlackboardHistory.History history = getCurrentHistory();
-            if (history == null) {
-                return new HistoryListingResult("empty", List.of(), 0, 0, 0, false, null);
+            if (!StringUtils.hasText(sessionId)) {
+                return new HistoryListingResult("error", List.of(), 0, 0, 0, false, SESSION_ID_MISSING_MESSAGE);
             }
 
-            int actualOffset = offset != null ? offset : 0;
-            int actualLimit = limit != null ? Math.min(limit, 100) : 50; // Default 50, max 100
+            var c = getCurrentHistory(sessionId);
 
-            List<BlackboardHistory.Entry> filtered = history.entries().stream()
-                    .filter(entry -> startTime == null || entry.timestamp().isAfter(Instant.parse(startTime)))
-                    .filter(entry -> endTime == null || entry.timestamp().isBefore(Instant.parse(endTime)))
-                    .filter(entry -> actionFilter == null || entry.actionName().contains(actionFilter))
-                    .toList();
+            if (c == null)
+                return new HistoryListingResult("empty", List.of(), 0, 0, 0, false, null);
 
-            List<BlackboardHistory.Entry> page = filtered.stream()
-                    .skip(actualOffset)
-                    .limit(actualLimit)
-                    .toList();
+            return c.fromHistory(history -> {
+                if (history == null) {
+                    return new HistoryListingResult("empty", List.of(), 0, 0, 0, false, null);
+                }
 
-            List<HistoryEntryView> views = createEntryViews(page);
+                int actualOffset = offset != null ? offset : 0;
+                int actualLimit = limit != null ? Math.min(limit, 100) : 50; // Default 50, max 100
 
-            return new HistoryListingResult(
-                    "success",
-                    views,
-                    filtered.size(),
-                    actualOffset,
-                    actualLimit,
-                    (actualOffset + actualLimit) < filtered.size(),
-                    null
-            );
+                List<BlackboardHistory.Entry> filtered = history.entries().stream()
+                        .filter(entry -> startTime == null || entry.timestamp().isAfter(Instant.parse(startTime)))
+                        .filter(entry -> endTime == null || entry.timestamp().isBefore(Instant.parse(endTime)))
+                        .filter(entry -> matchesActionName(actionFilter, entry.actionName()))
+                        .toList();
+
+                List<BlackboardHistory.Entry> page = filtered.stream()
+                        .skip(actualOffset)
+                        .limit(actualLimit)
+                        .toList();
+
+                List<HistoryEntryView> views = createListingViews(history.entries(), page);
+
+                return new HistoryListingResult(
+                        "success",
+                        views,
+                        filtered.size(),
+                        actualOffset,
+                        actualLimit,
+                        (actualOffset + actualLimit) < filtered.size(),
+                        null
+                );
+            });
         } catch (Exception e) {
             return new HistoryListingResult("error", List.of(), 0, 0, 0, false, e.getMessage());
         }
@@ -230,47 +292,137 @@ public class ContextManagerTools implements ToolCarrier {
      */
     @org.springframework.ai.tool.annotation.Tool(description = "Search history entries by content")
     public HistorySearchResult searchHistory(
+            @SetFromHeader(MCP_SESSION_HEADER)
+            String sessionId,
             @JsonPropertyDescription("Search query string")
             String query,
             @JsonPropertyDescription("Maximum number of results to return")
-            Integer maxResults
+            Integer maxResults,
+            @JsonPropertyDescription("Optional message entry id to scope search to")
+            String entryId
     ) {
         try {
+            if (!StringUtils.hasText(sessionId)) {
+                return new HistorySearchResult("error", List.of(), 0, query, SESSION_ID_MISSING_MESSAGE);
+            }
             if (!StringUtils.hasText(query)) {
                 return new HistorySearchResult("error", List.of(), 0, query, "Query cannot be empty");
             }
 
-            BlackboardHistory.History history = getCurrentHistory();
-            if (history == null) {
+            var c = getCurrentHistory(sessionId);
+
+            if (c == null)
                 return new HistorySearchResult("empty", List.of(), 0, query, null);
-            }
 
-            int limit = maxResults != null ? Math.min(maxResults, 50) : 20;
-            String lowerQuery = query.toLowerCase();
+            return c.fromHistory(history -> {
+                if (history == null) {
+                    return new HistorySearchResult("empty", List.of(), 0, query, null);
+                }
 
-            List<BlackboardHistory.Entry> matches = history.entries().stream()
-                    .filter(entry -> {
-                        if (entry.actionName().toLowerCase().contains(lowerQuery)) return true;
-                        if (entry.inputType() != null && entry.inputType().getSimpleName().toLowerCase().contains(lowerQuery))
-                            return true;
-                        if (entry.input() != null && entry.input().toString().toLowerCase().contains(lowerQuery))
-                            return true;
-                        return false;
-                    })
-                    .limit(limit)
-                    .toList();
+                int limit = maxResults != null ? Math.min(maxResults, 50) : 20;
+                String lowerQuery = query.toLowerCase();
 
-            List<HistoryEntryView> views = createEntryViews(matches);
+                List<HistoryEntryView> views;
+                if (StringUtils.hasText(entryId)) {
+                    BlackboardHistory.MessageEntry messageEntry = resolveMessageEntry(history, entryId);
+                    if (messageEntry == null) {
+                        return new HistorySearchResult("error", List.of(), 0, query, "Message entry not found");
+                    }
+                    List<MessageEventView> matches = messageEntry.events().stream()
+                            .filter(event -> matchesQuery(event, lowerQuery))
+                            .limit(limit)
+                            .map(event -> createMessageEventView(event, messageEntry.events().indexOf(event)))
+                            .toList();
+                    views = matches.stream()
+                            .map(view -> new HistoryEntryView(
+                                    view.index(),
+                                    view.timestamp(),
+                                    entryId + "::" + view.eventType(),
+                                    "MessageEvent",
+                                    view.summary(),
+                                    List.of()
+                            ))
+                            .toList();
+                } else {
+                    List<BlackboardHistory.Entry> matches = history.entries().stream()
+                            .filter(entry -> matchesQuery(entry, lowerQuery))
+                            .limit(limit)
+                            .toList();
+                    views = createEntryViews(matches);
+                }
 
-            return new HistorySearchResult(
-                    "success",
-                    views,
-                    views.size(),
-                    query,
-                    null
-            );
+                return new HistorySearchResult(
+                        "success",
+                        views,
+                        views.size(),
+                        query,
+                        null
+                );
+            });
         } catch (Exception e) {
             return new HistorySearchResult("error", List.of(), 0, query, e.getMessage());
+        }
+    }
+
+    /**
+     * Page through message events stored under a message entry.
+     */
+    @org.springframework.ai.tool.annotation.Tool(description = "Page through message events for a specific entry")
+    public MessagePageResult listMessageEvents(
+            @SetFromHeader(MCP_SESSION_HEADER)
+            String sessionId,
+            @JsonPropertyDescription("Message entry id from listHistory")
+            String entryId,
+            @JsonPropertyDescription("Number of events to skip (offset)")
+            Integer offset,
+            @JsonPropertyDescription("Maximum number of events to return")
+            Integer limit
+    ) {
+        try {
+            if (!StringUtils.hasText(sessionId)) {
+                return new MessagePageResult("error", entryId, List.of(), 0, 0, 0, false, SESSION_ID_MISSING_MESSAGE);
+            }
+            if (!StringUtils.hasText(entryId)) {
+                return new MessagePageResult("error", entryId, List.of(), 0, 0, 0, false, "Entry id is required");
+            }
+
+            var c = getCurrentHistory(sessionId);
+
+            if (c == null)
+                return new MessagePageResult("error", entryId, List.of(), 0, 0, 0, false, "No history available");
+
+            return c.fromHistory(history -> {
+                if (history == null) {
+                    return new MessagePageResult("error", entryId, List.of(), 0, 0, 0, false, "No history available");
+                }
+
+                BlackboardHistory.MessageEntry messageEntry = resolveMessageEntry(history, entryId);
+                if (messageEntry == null) {
+                    return new MessagePageResult("error", entryId, List.of(), 0, 0, 0, false, "Message entry not found");
+                }
+
+                int actualOffset = offset != null ? offset : 0;
+                int actualLimit = limit != null ? Math.min(limit, 100) : 50;
+
+                List<MessageEventView> page = IntStream.range(0, messageEntry.events().size())
+                        .skip(actualOffset)
+                        .limit(actualLimit)
+                        .mapToObj(index -> createMessageEventView(messageEntry.events().get(index), index))
+                        .toList();
+
+                return new MessagePageResult(
+                        "success",
+                        entryId,
+                        page,
+                        messageEntry.events().size(),
+                        actualOffset,
+                        actualLimit,
+                        (actualOffset + actualLimit) < messageEntry.events().size(),
+                        null
+                );
+            });
+        } catch (Exception e) {
+            return new MessagePageResult("error", entryId, List.of(), 0, 0, 0, false, e.getMessage());
         }
     }
 
@@ -280,84 +432,37 @@ public class ContextManagerTools implements ToolCarrier {
      */
     @org.springframework.ai.tool.annotation.Tool(description = "Retrieve a specific history entry by index")
     public HistoryItemResult getHistoryItem(
+            @SetFromHeader(MCP_SESSION_HEADER)
+            String sessionId,
             @JsonPropertyDescription("Zero-based index of the entry to retrieve")
             int index
     ) {
         try {
-            BlackboardHistory.History history = getCurrentHistory();
-            if (history == null) {
+            if (!StringUtils.hasText(sessionId)) {
+                return new HistoryItemResult("error", null, SESSION_ID_MISSING_MESSAGE);
+            }
+            var c = getCurrentHistory(sessionId);
+
+            if (c == null)
                 return new HistoryItemResult("error", null, "No history available");
-            }
 
-            if (index < 0 || index >= history.entries().size()) {
-                return new HistoryItemResult("error", null, 
-                        String.format("Index %d out of bounds (0-%d)", index, history.entries().size() - 1));
-            }
+            return c.fromHistory(history -> {
+                if (history == null) {
+                    return new HistoryItemResult("error", null, "No history available");
+                }
 
-            BlackboardHistory.Entry entry = history.entries().get(index);
-            HistoryEntryView view = createEntryView(entry, index);
+                if (index < 0 || index >= history.entries().size()) {
+                    return new HistoryItemResult("error", null,
+                            String.format("Index %d out of bounds (0-%d)", index, history.entries().size() - 1));
+                }
 
-            return new HistoryItemResult("success", view, null);
+                BlackboardHistory.Entry entry = history.entries().get(index);
+                HistoryEntryView view = createEntryView(entry, index);
+
+                return new HistoryItemResult("success", view, null);
+            });
         } catch (Exception e) {
             return new HistoryItemResult("error", null, e.getMessage());
-        }
-    }
-
-    /**
-     * Persist a curated context bundle derived from multiple history entries.
-     * Represents newly constructed working context with links to source history items.
-     */
-    @org.springframework.ai.tool.annotation.Tool(description = "Create a context snapshot from history entries")
-    public ContextSnapshotResult createContextSnapshot(
-            @JsonPropertyDescription("Indices of history entries to include in snapshot")
-            List<Integer> entryIndices,
-            @JsonPropertyDescription("Summary description of this context snapshot")
-            String summary,
-            @JsonPropertyDescription("Reasoning for this context construction")
-            String reasoning
-    ) {
-        try {
-            BlackboardHistory.History history = getCurrentHistory();
-            if (history == null) {
-                return new ContextSnapshotResult("error", null, null, 0, null, "No history available");
-            }
-
-            if (entryIndices == null || entryIndices.isEmpty()) {
-                return new ContextSnapshotResult("error", null, null, 0, null, "No entry indices provided");
-            }
-
-            // Validate all indices
-            for (int index : entryIndices) {
-                if (index < 0 || index >= history.entries().size()) {
-                    return new ContextSnapshotResult("error", null, null, 0, null,
-                            String.format("Index %d out of bounds", index));
-                }
-            }
-
-            String snapshotId = UUID.randomUUID().toString();
-            Instant created = Instant.now();
-
-            // Store snapshot as a note in the history
-            ContextSnapshot snapshot = new ContextSnapshot(
-                    snapshotId,
-                    created,
-                    entryIndices,
-                    summary,
-                    reasoning
-            );
-
-            storeSnapshot(snapshot);
-
-            return new ContextSnapshotResult(
-                    "success",
-                    snapshotId,
-                    created,
-                    entryIndices.size(),
-                    summary,
-                    null
-            );
-        } catch (Exception e) {
-            return new ContextSnapshotResult("error", null, null, 0, null, e.getMessage());
         }
     }
 
@@ -367,6 +472,8 @@ public class ContextManagerTools implements ToolCarrier {
      */
     @org.springframework.ai.tool.annotation.Tool(description = "Add a note/annotation to history entries")
     public HistoryNoteResult addHistoryNote(
+            @SetFromHeader(MCP_SESSION_HEADER)
+            String sessionId,
             @JsonPropertyDescription("Indices of history entries this note references")
             List<Integer> entryIndices,
             @JsonPropertyDescription("Note content explaining reasoning or classification")
@@ -375,65 +482,106 @@ public class ContextManagerTools implements ToolCarrier {
             List<String> tags
     ) {
         try {
+            if (!StringUtils.hasText(sessionId)) {
+                return new HistoryNoteResult("error", null, null, SESSION_ID_MISSING_MESSAGE);
+            }
             if (!StringUtils.hasText(noteContent)) {
                 return new HistoryNoteResult("error", null, null, "Note content cannot be empty");
             }
 
-            BlackboardHistory.History history = getCurrentHistory();
-            if (history == null) {
-                return new HistoryNoteResult("error", null, null, "No history available");
-            }
+            var c = getCurrentHistory(sessionId);
 
-            // Validate indices
-            if (entryIndices != null) {
-                for (int index : entryIndices) {
-                    if (index < 0 || index >= history.entries().size()) {
-                        return new HistoryNoteResult("error", null, null,
-                                String.format("Index %d out of bounds", index));
+            if (c == null)
+                return new HistoryNoteResult("error", null, null, "No history available");
+
+            return c.fromHistory(history -> {
+                if (history == null) {
+                    return new HistoryNoteResult("error", null, null, "No history available");
+                }
+
+                // Validate indices
+                if (entryIndices != null) {
+                    for (int index : entryIndices) {
+                        if (index < 0 || index >= history.entries().size()) {
+                            return new HistoryNoteResult("error", null, null,
+                                    String.format("Index %d out of bounds", index));
+                        }
                     }
                 }
-            }
 
-            String noteId = UUID.randomUUID().toString();
-            Instant created = Instant.now();
+                String noteId = UUID.randomUUID().toString();
+                Instant created = Instant.now();
 
-            HistoryNote note = new HistoryNote(
-                    noteId,
-                    created,
-                    entryIndices != null ? entryIndices : List.of(),
-                    noteContent,
-                    tags != null ? tags : List.of()
-            );
+                BlackboardHistory.HistoryNote note = new BlackboardHistory.HistoryNote(
+                        noteId,
+                        created,
+                        noteContent,
+                        tags != null ? tags : List.of(),
+                        null
+                );
 
-            storeNote(note);
+                storeNote(note, entryIndices != null ? entryIndices : List.of());
 
-            return new HistoryNoteResult("success", noteId, created, null);
+                return new HistoryNoteResult("success", noteId, created, null);
+            });
         } catch (Exception e) {
             return new HistoryNoteResult("error", null, null, e.getMessage());
         }
     }
 
-    // ========== Helper Methods ==========
 
-    private BlackboardHistory.History getCurrentHistory() {
-        // In actual implementation, this would retrieve from OperationContext
-        // For now, return null to indicate no history - subclasses can override
-        return null;
+    private BlackboardHistory getCurrentHistory(String sessionId) {
+        if (!StringUtils.hasText(sessionId)) {
+            return null;
+        }
+        if (agentPlatform == null) {
+            return null;
+        }
+        AgentProcess agentProcess = agentPlatform.getAgentProcess(sessionId);
+        if (agentProcess == null) {
+            return null;
+        }
+        return Optional.ofNullable(agentProcess.getBlackboard().last(BlackboardHistory.class))
+                .or(() -> {
+                    log.error("Blackboard history was not found.");
+                    return Optional.empty();
+                })
+                .orElse(null);
     }
 
     private List<HistoryEntryView> createEntryViews(List<BlackboardHistory.Entry> entries) {
-        return entries.stream()
-                .map(entry -> createEntryView(entry, entries.indexOf(entry)))
-                .collect(Collectors.toList());
+        return IntStream.range(0, entries.size())
+                .mapToObj(index -> createEntryView(entries.get(index), index))
+                .toList();
+    }
+
+    private List<HistoryEntryView> createListingViews(
+            List<BlackboardHistory.Entry> allEntries,
+            List<BlackboardHistory.Entry> pageEntries
+    ) {
+        return pageEntries.stream()
+                .map(entry -> {
+                    int index = allEntries.indexOf(entry);
+                    if (index < 0) {
+                        index = pageEntries.indexOf(entry);
+                    }
+                    return createEntryView(entry, index);
+                })
+                .toList();
     }
 
     private HistoryEntryView createEntryView(BlackboardHistory.Entry entry, int index) {
-        String inputSummary = entry.input() != null 
-                ? truncate(entry.input().toString(), 200) 
-                : "null";
-        
-        String inputType = entry.inputType() != null 
-                ? entry.inputType().getSimpleName() 
+        return switch (entry) {
+            case BlackboardHistory.MessageEntry messageEntry -> createMessageEntryView(messageEntry, index);
+            case BlackboardHistory.DefaultEntry defaultEntry -> createDefaultEntryView(defaultEntry, index);
+        };
+    }
+
+    private HistoryEntryView createDefaultEntryView(BlackboardHistory.DefaultEntry entry, int index) {
+        String inputSummary = summarizeEntryInput(entry.input());
+
+        String inputType = entry.inputType() != null
+                ? entry.inputType().getSimpleName()
                 : "unknown";
 
         return new HistoryEntryView(
@@ -446,6 +594,29 @@ public class ContextManagerTools implements ToolCarrier {
         );
     }
 
+    private HistoryEntryView createMessageEntryView(BlackboardHistory.MessageEntry entry, int index) {
+        int count = entry.events().size();
+        String summary = "Message entry id=" + messageEntryId(index) + ", totalEvents=" + count;
+        return new HistoryEntryView(
+                index,
+                entry.timestamp(),
+                entry.actionName(),
+                "MessageEventPage",
+                summary,
+                getNotesForEntry(index)
+        );
+    }
+
+    private MessageEventView createMessageEventView(Events.GraphEvent event, int index) {
+        return new MessageEventView(
+                index,
+                event.timestamp(),
+                event.eventType(),
+                event.nodeId(),
+                summarizeEvent(event)
+        );
+    }
+
     private String truncate(String str, int maxLength) {
         if (str.length() <= maxLength) {
             return str;
@@ -453,40 +624,90 @@ public class ContextManagerTools implements ToolCarrier {
         return str.substring(0, maxLength - 3) + "...";
     }
 
+    private String summarizeEntryInput(Object input) {
+        if (input == null) {
+            return "null";
+        }
+        if (input instanceof List<?> list) {
+            return "Message events: " + list.size();
+        }
+        return truncate(input.toString(), 200);
+    }
+
     private List<String> getNotesForEntry(int index) {
         // Placeholder - actual implementation would retrieve stored notes
         return List.of();
     }
 
-    private void storeSnapshot(ContextSnapshot snapshot) {
-        // Placeholder - actual implementation would store in context or repository
+    private String messageEntryId(int index) {
+        return "messages:" + index;
     }
 
-    private void storeNote(HistoryNote note) {
-        // Placeholder - actual implementation would store in context or repository
+    private Integer parseMessageEntryIndex(String entryId) {
+        if (!StringUtils.hasText(entryId) || !entryId.startsWith("messages:")) {
+            return null;
+        }
+        try {
+            return Integer.parseInt(entryId.substring("messages:".length()));
+        } catch (NumberFormatException e) {
+            return null;
+        }
     }
 
-    // ========== Data Classes for Storage ==========
+    private BlackboardHistory.MessageEntry resolveMessageEntry(BlackboardHistory.History history, String entryId) {
+        Integer index = parseMessageEntryIndex(entryId);
+        if (index == null) {
+            return null;
+        }
+        if (index < 0 || index >= history.entries().size()) {
+            return null;
+        }
+        BlackboardHistory.Entry entry = history.entries().get(index);
+        return switch (entry) {
+            case BlackboardHistory.MessageEntry messageEntry -> messageEntry;
+            case BlackboardHistory.DefaultEntry ignored -> null;
+        };
+    }
 
-    /**
-     * Represents a curated context snapshot
-     */
-    public record ContextSnapshot(
-            String id,
-            Instant created,
-            List<Integer> entryIndices,
-            String summary,
-            String reasoning
-    ) {}
+    private boolean matchesQuery(BlackboardHistory.Entry entry, String query) {
+        return switch (entry) {
+            case BlackboardHistory.DefaultEntry defaultEntry -> {
+                if (defaultEntry.actionName().toLowerCase().contains(query)) {
+                    yield true;
+                }
+                if (defaultEntry.inputType() != null
+                        && defaultEntry.inputType().getSimpleName().toLowerCase().contains(query)) {
+                    yield true;
+                }
+                yield defaultEntry.input() != null && defaultEntry.input().toString().toLowerCase().contains(query);
+            }
+            case BlackboardHistory.MessageEntry messageEntry -> {
+                if (messageEntry.actionName().toLowerCase().contains(query)) {
+                    yield true;
+                }
+                yield false;
+            }
+        };
+    }
 
-    /**
-     * Represents a note attached to history
-     */
-    public record HistoryNote(
-            String id,
-            Instant created,
-            List<Integer> referencedEntryIndices,
-            String content,
-            List<String> tags
-    ) {}
+    private boolean matchesQuery(Events.GraphEvent event, String query) {
+        if (event.eventType().toLowerCase().contains(query)) {
+            return true;
+        }
+        if (event.nodeId() != null && event.nodeId().toLowerCase().contains(query)) {
+            return true;
+        }
+        return summarizeEvent(event).toLowerCase().contains(query);
+    }
+
+    private String summarizeEvent(Events.GraphEvent event) {
+        if (event == null) {
+            return "null";
+        }
+        return truncate(event.toString(), 200);
+    }
+
+    private void storeNote(BlackboardHistory.HistoryNote note, List<Integer> entryIndices) {
+        // Placeholder - actual implementation would store in context or repository
+    }
 }
